parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

	import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, INT_CONSTANT=38, 
		REAL_CONSTANT=39, CHAR_CONSTANT=40, IDENT=41, LINE_COMMENT=42, MULTILINE_COMMENT=43, 
		WHITESPACE=44;
	public static final int
		RULE_start = 0, RULE_definiciones = 1, RULE_definicion = 2, RULE_def_variable = 3, 
		RULE_def_atributo = 4, RULE_def_parametro = 5, RULE_parametros = 6, RULE_def_funcion = 7, 
		RULE_def_struct = 8, RULE_atributos = 9, RULE_tipo = 10, RULE_tipo_retorno = 11, 
		RULE_declaraciones = 12, RULE_declaracion = 13, RULE_sentencias = 14, 
		RULE_sentencia = 15, RULE_sentencia_if = 16, RULE_sentencia_else = 17, 
		RULE_argumentos = 18, RULE_expresion = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "definiciones", "definicion", "def_variable", "def_atributo", 
			"def_parametro", "parametros", "def_funcion", "def_struct", "atributos", 
			"tipo", "tipo_retorno", "declaraciones", "declaracion", "sentencias", 
			"sentencia", "sentencia_if", "sentencia_else", "argumentos", "expresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "';'", "','", "'('", "')'", "'{'", "'}'", "'struct'", 
			"'int'", "'float'", "'char'", "'['", "']'", "'='", "'print'", "'println'", 
			"'printsp'", "'return'", "'read'", "'while'", "'if'", "'else'", "'.'", 
			"'*'", "'/'", "'+'", "'-'", "'<='", "'>='", "'<'", "'>'", "'=='", "'!='", 
			"'&&'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "IDENT", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Programa ast;
		public DefinicionesContext definiciones;
		public DefinicionesContext definiciones() {
			return getRuleContext(DefinicionesContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			((StartContext)_localctx).definiciones = definiciones();
			 ((StartContext)_localctx).ast =  new Programa(((StartContext)_localctx).definiciones.lista); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionesContext extends ParserRuleContext {
		public List<Definicion> lista = new ArrayList<Definicion>();;
		public DefinicionContext definicion;
		public List<DefinicionContext> definicion() {
			return getRuleContexts(DefinicionContext.class);
		}
		public DefinicionContext definicion(int i) {
			return getRuleContext(DefinicionContext.class,i);
		}
		public DefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones; }
	}

	public final DefinicionesContext definiciones() throws RecognitionException {
		DefinicionesContext _localctx = new DefinicionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definiciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__8) | (1L << IDENT))) != 0)) {
				{
				{
				setState(43);
				((DefinicionesContext)_localctx).definicion = definicion();
				 _localctx.lista.add(((DefinicionesContext)_localctx).definicion.ast); 
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public Definicion ast;
		public Def_variableContext def_variable;
		public Def_atributoContext def_atributo;
		public Def_funcionContext def_funcion;
		public Def_structContext def_struct;
		public Def_variableContext def_variable() {
			return getRuleContext(Def_variableContext.class,0);
		}
		public Def_atributoContext def_atributo() {
			return getRuleContext(Def_atributoContext.class,0);
		}
		public Def_funcionContext def_funcion() {
			return getRuleContext(Def_funcionContext.class,0);
		}
		public Def_structContext def_struct() {
			return getRuleContext(Def_structContext.class,0);
		}
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				((DefinicionContext)_localctx).def_variable = def_variable();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).def_variable.ast; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				((DefinicionContext)_localctx).def_atributo = def_atributo();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).def_atributo.ast; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				((DefinicionContext)_localctx).def_funcion = def_funcion();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).def_funcion.ast; 	
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				((DefinicionContext)_localctx).def_struct = def_struct();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).def_struct.ast; 	
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_variableContext extends ParserRuleContext {
		public DefVariable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Def_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_variable; }
	}

	public final Def_variableContext def_variable() throws RecognitionException {
		Def_variableContext _localctx = new Def_variableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_def_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(T__0);
			setState(66);
			((Def_variableContext)_localctx).IDENT = match(IDENT);
			setState(67);
			match(T__1);
			setState(68);
			((Def_variableContext)_localctx).tipo = tipo();
			setState(69);
			match(T__2);
			 ((Def_variableContext)_localctx).ast =  new DefVariable(((Def_variableContext)_localctx).tipo.ast, ((Def_variableContext)_localctx).IDENT, "global"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_atributoContext extends ParserRuleContext {
		public DefAtributo ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Def_atributoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_atributo; }
	}

	public final Def_atributoContext def_atributo() throws RecognitionException {
		Def_atributoContext _localctx = new Def_atributoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_def_atributo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			((Def_atributoContext)_localctx).IDENT = match(IDENT);
			setState(73);
			match(T__1);
			setState(74);
			((Def_atributoContext)_localctx).tipo = tipo();
			setState(75);
			match(T__2);
			 ((Def_atributoContext)_localctx).ast =  new DefAtributo(((Def_atributoContext)_localctx).tipo.ast, ((Def_atributoContext)_localctx).IDENT); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_parametroContext extends ParserRuleContext {
		public Parametro ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Def_parametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_parametro; }
	}

	public final Def_parametroContext def_parametro() throws RecognitionException {
		Def_parametroContext _localctx = new Def_parametroContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_def_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			((Def_parametroContext)_localctx).IDENT = match(IDENT);
			setState(79);
			match(T__1);
			setState(80);
			((Def_parametroContext)_localctx).tipo = tipo();
			 ((Def_parametroContext)_localctx).ast =  new Parametro(((Def_parametroContext)_localctx).tipo.ast, ((Def_parametroContext)_localctx).IDENT); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<Parametro> lista = new ArrayList<Parametro>();;
		public Token IDENT;
		public TipoContext tipo;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(83);
				((ParametrosContext)_localctx).IDENT = match(IDENT);
				setState(84);
				match(T__1);
				setState(85);
				((ParametrosContext)_localctx).tipo = tipo();
				 _localctx.lista.add(new Parametro(((ParametrosContext)_localctx).tipo.ast, ((ParametrosContext)_localctx).IDENT)); 
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(87);
					match(T__3);
					setState(88);
					((ParametrosContext)_localctx).IDENT = match(IDENT);
					setState(89);
					match(T__1);
					setState(90);
					((ParametrosContext)_localctx).tipo = tipo();
					 _localctx.lista.add(new Parametro(((ParametrosContext)_localctx).tipo.ast, ((ParametrosContext)_localctx).IDENT)); 
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_funcionContext extends ParserRuleContext {
		public DefFuncion ast;
		public Token IDENT;
		public ParametrosContext parametros;
		public Tipo_retornoContext tipo_retorno;
		public DeclaracionesContext declaraciones;
		public SentenciasContext sentencias;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public Tipo_retornoContext tipo_retorno() {
			return getRuleContext(Tipo_retornoContext.class,0);
		}
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public Def_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_funcion; }
	}

	public final Def_funcionContext def_funcion() throws RecognitionException {
		Def_funcionContext _localctx = new Def_funcionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_def_funcion);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				((Def_funcionContext)_localctx).IDENT = match(IDENT);
				setState(101);
				match(T__4);
				setState(102);
				((Def_funcionContext)_localctx).parametros = parametros();
				setState(103);
				match(T__5);
				setState(104);
				((Def_funcionContext)_localctx).tipo_retorno = tipo_retorno();
				setState(105);
				match(T__6);
				setState(106);
				((Def_funcionContext)_localctx).declaraciones = declaraciones();
				setState(107);
				((Def_funcionContext)_localctx).sentencias = sentencias();
				setState(108);
				match(T__7);
				 ((Def_funcionContext)_localctx).ast =  new DefFuncion(((Def_funcionContext)_localctx).IDENT, ((Def_funcionContext)_localctx).parametros.lista, ((Def_funcionContext)_localctx).tipo_retorno.ast, ((Def_funcionContext)_localctx).declaraciones.lista, ((Def_funcionContext)_localctx).sentencias.lista); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				((Def_funcionContext)_localctx).IDENT = match(IDENT);
				setState(112);
				match(T__4);
				setState(113);
				((Def_funcionContext)_localctx).parametros = parametros();
				setState(114);
				match(T__5);
				setState(115);
				match(T__6);
				setState(116);
				((Def_funcionContext)_localctx).declaraciones = declaraciones();
				setState(117);
				((Def_funcionContext)_localctx).sentencias = sentencias();
				setState(118);
				match(T__7);
				 ((Def_funcionContext)_localctx).ast =  new DefFuncion(((Def_funcionContext)_localctx).IDENT, ((Def_funcionContext)_localctx).parametros.lista, new TipoVoid(), ((Def_funcionContext)_localctx).declaraciones.lista, ((Def_funcionContext)_localctx).sentencias.lista); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_structContext extends ParserRuleContext {
		public DefStruct ast;
		public Token IDENT;
		public AtributosContext atributos;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public AtributosContext atributos() {
			return getRuleContext(AtributosContext.class,0);
		}
		public Def_structContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_struct; }
	}

	public final Def_structContext def_struct() throws RecognitionException {
		Def_structContext _localctx = new Def_structContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_def_struct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__8);
			setState(124);
			((Def_structContext)_localctx).IDENT = match(IDENT);
			setState(125);
			match(T__6);
			setState(126);
			((Def_structContext)_localctx).atributos = atributos();
			setState(127);
			match(T__7);
			setState(128);
			match(T__2);
			 ((Def_structContext)_localctx).ast =  new DefStruct(((Def_structContext)_localctx).IDENT, ((Def_structContext)_localctx).atributos.lista); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributosContext extends ParserRuleContext {
		public List<DefAtributo> lista = new ArrayList<DefAtributo>();;
		public Def_atributoContext def_atributo;
		public List<Def_atributoContext> def_atributo() {
			return getRuleContexts(Def_atributoContext.class);
		}
		public Def_atributoContext def_atributo(int i) {
			return getRuleContext(Def_atributoContext.class,i);
		}
		public AtributosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributos; }
	}

	public final AtributosContext atributos() throws RecognitionException {
		AtributosContext _localctx = new AtributosContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_atributos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(131);
				((AtributosContext)_localctx).def_atributo = def_atributo();
				 _localctx.lista.add(((AtributosContext)_localctx).def_atributo.ast); 
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public Tipo ast;
		public Token IDENT;
		public Token INT_CONSTANT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(GrammarParser.INT_CONSTANT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tipo);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(T__9);
				 ((TipoContext)_localctx).ast =  new TipoInt(); 		 					
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(T__10);
				 ((TipoContext)_localctx).ast =  new TipoFloat(); 		 					
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				match(T__11);
				 ((TipoContext)_localctx).ast =  new TipoChar();		 					
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				((TipoContext)_localctx).IDENT = match(IDENT);
				 ((TipoContext)_localctx).ast =  new TipoStruct(((TipoContext)_localctx).IDENT); 					
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 5);
				{
				setState(147);
				match(T__12);
				setState(148);
				((TipoContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				setState(149);
				match(T__13);
				setState(150);
				((TipoContext)_localctx).tipo = tipo();
				 ((TipoContext)_localctx).ast =  new TipoArray(((TipoContext)_localctx).tipo.ast, ((TipoContext)_localctx).INT_CONSTANT); 	
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_retornoContext extends ParserRuleContext {
		public Tipo ast;
		public TipoContext tipo;
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Tipo_retornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_retorno; }
	}

	public final Tipo_retornoContext tipo_retorno() throws RecognitionException {
		Tipo_retornoContext _localctx = new Tipo_retornoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tipo_retorno);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(T__1);
			setState(156);
			((Tipo_retornoContext)_localctx).tipo = tipo();
			 ((Tipo_retornoContext)_localctx).ast =  ((Tipo_retornoContext)_localctx).tipo.ast; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionesContext extends ParserRuleContext {
		public List<DefVariable> lista = new ArrayList<DefVariable>();;
		public DeclaracionContext declaracion;
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_declaraciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(159);
				((DeclaracionesContext)_localctx).declaracion = declaracion();
				 _localctx.lista.add(((DeclaracionesContext)_localctx).declaracion.ast); 
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

